--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -37,7 +37,7 @@
         {% if request.user.is_superuser %}
           <a href="{% url 'inventory:new' %}" class="text-lg font-semibold hover:text-blue-500">New item</a>
         {% else %}
-          <a href="#" class="text-lg font-semibold hover:text-blue-500">Orders</a>
+          <a href="{% url 'inventory:orders' %}" class="text-lg font-semibold hover:text-blue-500">Orders</a>
         {% endif %}
         <a href="{% url 'core:logout' %}" class="text-lg font-semibold hover:text-blue-500">Log out</a>
       {% else %}
