--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -15,7 +15,7 @@
                     </div>
 
                     <div class="p-3 sm:p-4 bg-white rounded-b-xl">
-                        <h2 class="text-xl sm:text-2xl">{{ item.name }}</h2>
+                        <h2 class="text-xl sm:text-xl">{{ item.name }}</h2>
                         <!-- <p class="text-gray-500">Price: {{ item.price }}</p> -->
                     </div>
                 </a>
