removed a buggy tag

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="mt-6 px-3 py-6 bg-gray-100 rounded-xl">
+    <!-- <div class="mt-6 px-3 py-6 bg-gray-100 rounded-xl">
         
         <h2 class="mb-6 text-xl text-center">Categories</h2>
 
@@ -40,5 +40,5 @@
             </div>
             {% endfor %}
         </div>
-    </div>
+    </div> -->
 {% endblock %}
