--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -56,8 +56,8 @@
     <div class="w-full md:w-1/2 mt-4 md:mt-0">
         <h3 class="mb-3 font-semibold text-white">Contacts</h3>
         <ul class="space-y-2">
-            <li class="text-white">(+91) 24680 13579</li>
-            <li class="text-white"><a href="mailto:example@example.com" class="text-sm hover:text-blue-500">Email</a></li>
+            <li class="text-white">(+91) 8073972883/6360352004</li>
+            <li class="text-white"><a href="mailto:jbelectricals.jo@gmail.com" class="text-sm hover:text-blue-500">Email</a></li>
         </ul>
     </div>
   </footer>
