--- a/inventory/templates/inventory/detail.html
+++ b/inventory/templates/inventory/detail.html
@@ -4,23 +4,28 @@
 
 {% block content %}
 
-<div class="grid grid-cols-1 gap-6 shadow-md bg-white sm:grid-cols-5">
+<div class="grid grid-cols-1 gap-6 shadow-md bg-white sm:grid-cols-5 rounded-xl">
     
     <div class="col-span-1 sm:col-span-3">
         <img src="{{ item.image.url }}" class="p-6 rounded-xl">
     </div>
 
-    <div class="col-span-1 sm:col-span-2 p-6 rounded-xl">
+    <div class="col-span-1 sm:col-span-2 p-3 rounded-xl">
 
-        <h1 class="mb-6 text-3xl">{{ item.name }}</h1>
-        <p class="text-gray-500"><strong>Price: </strong>{{ item.price }}</p>
+        <h1 class="mb-6 text-2xl p-2 border-b border-gray-300">{{ item.name }}</h1>
         
         {% if item.description %}
-            <p class="text-gray-700">
-                <strong class="text-gray-500">Description: </strong><br>
+            <h2 class="text-xl px-2">Description</h2>
+            <p class="text-gray-500 p-2 border-b border-gray-300">
+                <!-- <strong class="text-gray-500">Description: </strong><br> -->
                 {{ item.description }}
             </p>
         {% endif %}
+
+        <h2 class="text-xl p-2">General</h2>
+        <p class="text-gray-500 px-2"><strong>Meters: </strong>{{ item.meters }}</p>
+        <p class="text-gray-500 px-2"><strong>Inches: </strong>{{ item.inches }}</p>
+        <p class="text-gray-500 px-2"><strong>IP Rating: </strong>{{ item.ip_rating }}</p>
         
         {% if request.user == item.created_by %}
             
@@ -34,8 +39,20 @@
 
         {% else %}
             
+            <!-- simple a tag that always works -->
             <!-- <a href="https://api.whatsapp.com/send?phone=6360352004" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-500 text-white rounded-xl hover:bg-gray-500">Contact Seller</a> -->
-            <a href="https://api.whatsapp.com/send?phone=6360352004" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-500 text-white rounded-xl hover:bg-gray-500 {% if not request.user.is_authenticated %}opacity-50 cursor-not-allowed{% endif %}">Contact Seller</a>
+
+            <!-- a tag with button faked as unclickable if user not logged in -->
+            <!-- <a href="https://api.whatsapp.com/send?phone=6360352004" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-500 text-white rounded-xl hover:bg-gray-500 {% if not request.user.is_authenticated %}opacity-50 cursor-not-allowed{% endif %}">Contact Seller</a> -->
+
+            <!-- a tag that is disabled if user is not logged in -->
+            <!-- <a href="https://api.whatsapp.com/send?phone=6360352004" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-600 text-white rounded-xl hover:bg-gray-500 {% if not request.user.is_authenticated %}bg-gray-300 text-gray-600 cursor-not-allowed pointer-events-none{% endif %}" {% if not request.user.is_authenticated %}disabled{% endif %}>Contact Seller</a> -->
+
+            <!-- disabled a tag when not logged in with hidden number -->
+            <!-- <a id="contact-seller" data-phone="NjM2MDM1MjAwNA==" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-600 text-white rounded-xl hover:bg-gray-500 {% if not request.user.is_authenticated %}bg-gray-300 text-gray-600 cursor-not-allowed pointer-events-none{% endif %}" {% if not request.user.is_authenticated %}disabled{% endif %}>Contact Seller</a> -->
+
+            <!-- disabled a tag with information -->
+            <button id="contact-seller" data-phone="NjM2MDM1MjAwNA==" data-item-name="{{ item.name }}" data-item-description="{{ item.description }}" data-item-meters="{{ item.meters }}" data-item-inches="{{ item.inches }}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-blue-600 text-white rounded-xl hover:bg-gray-500 {% if not request.user.is_authenticated %}bg-gray-300 text-gray-600 cursor-not-allowed pointer-events-none{% endif %}" {% if not request.user.is_authenticated %}disabled{% endif %}>Contact Seller</button>
             
         {% endif %}
 
@@ -47,7 +64,7 @@
 		
     <h2 class="mb-12 text-2xl text-center">Related Items</h2>
 
-    <div class="flex flex-wrap gap-3">
+    <div class="flex flex-wrap gap-3 justify-center">
         {% for item in related_items %}
             <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5 shadow-md bg-white rounded-xl p-2">
                 <a href="{% url 'inventory:detail' item.id %}">
