--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -35,10 +35,10 @@
       <a href="{% url 'inventory:items' %}" class="text-lg font-semibold hover:text-blue-500">Search items</a>
       {% if request.user.is_authenticated %}
         <a href="{% url 'inventory:orders' %}" class="text-lg font-semibold hover:text-blue-500">Orders</a>
-        <a href="{% url 'core:logout' %}" class="text-lg font-semibold hover:text-blue-500">Log out</a>
+        <a href="{% url 'logout' %}" class="text-lg font-semibold hover:text-blue-500">Log out</a>
       {% else %}
-        <a href="{% url 'core:signup' %}" class="text-lg font-semibold hover:text-blue-500">Sign up</a>
-        <a href="{% url 'core:login' %}" class="text-lg font-semibold hover:text-blue-500">Log in</a>
+        <a href="{% url 'signup' %}" class="text-lg font-semibold hover:text-blue-500">Sign up</a>
+        <a href="{% url 'login' %}" class="text-lg font-semibold hover:text-blue-500">Log in</a>
       {% endif %}
     </div>
   </nav>
