--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -30,6 +30,12 @@
             {% endif %}
         </div>
 
+        <div class="flex justify-center p-2">
+            {% if form.username.errors or form.password.errors or form.non_field_errors %}
+                <a href="{% url 'password_reset' %}" class="py-2 px-4 text-lg bg-gray-800 hover:bg-blue-500 rounded text-white">Reset password</a>
+            {% endif %}
+        </div>
+
         <div class="flex justify-center">
             <button class="py-2 px-4 text-lg bg-gray-800 hover:bg-blue-500 rounded text-white">
                 Submit
