--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -34,7 +34,7 @@
     <div class="space-x-6 hidden md:flex nav-links">
       <a href="{% url 'inventory:items' %}" class="text-lg font-semibold hover:text-blue-500">Search items</a>
       {% if request.user.is_authenticated %}
-        <a href="{% url 'inventory:orders' %}" class="text-lg font-semibold hover:text-blue-500">Orders</a>
+        <a href="{% url 'inventory:orders_list' %}" class="text-lg font-semibold hover:text-blue-500">Orders</a>
         <a href="{% url 'logout' %}" class="text-lg font-semibold hover:text-blue-500">Log out</a>
       {% else %}
         <a href="{% url 'signup' %}" class="text-lg font-semibold hover:text-blue-500">Sign up</a>
