--- a/core/templates/core/password_reset.html
+++ b/core/templates/core/password_reset.html
@@ -3,15 +3,15 @@
 {% block title %}Password Reset{% endblock %}
 
 {% block content %}
-<div class="w-full my-6 px-4 bg-white shadow-md rounded-xl p-6">
-    <h1 class="mb-4 text-xl md:text-2xl text-center">Reset Your Password</h1>
+<div class="w-full my-6 px-4 bg-gray-900 shadow-md rounded-xl p-6">
+    <h1 class="mb-4 text-xl md:text-2xl text-center text-white">Reset Your Password</h1>
 
     <form method="post" action=".">
         {% csrf_token %}
         {{ form.non_field_errors }}
 
         <div class="mb-4">
-            <label class="block mb-2">Email</label>
+            <label class="block mb-2 text-white">Email</label>
             {{ form.email }}
             {% if form.email.errors %}
                 <div class="mt-1 text-red-600">
@@ -21,7 +21,7 @@
         </div>
 
         <div class="flex justify-center">
-            <button class="py-2 px-4 text-lg bg-gray-800 hover:bg-blue-500 rounded text-white">
+            <button class="py-2 px-4 text-lg bg-gray-700 hover:bg-blue-500 rounded text-white">
                 Submit
             </button>
         </div>
