--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 
-<div class="w-full my-6 px-4 bg-white shadow-md rounded-xl p-6">
+<div class="w-full my-6 px-4 bg-gray-800 text-white shadow-md rounded-xl p-6">
     
     <h1 class="mb-4 text-2xl md:text-3xl text-center">Sign up</h1>
     
-    <form method="post" action=".">
+    <form method="post" action="." text-white>
         {% csrf_token %}
 
         <div class="mb-4">
@@ -62,7 +62,7 @@
         </div>
 
         <div class="flex justify-center">
-            <button class="py-2 px-5 text-lg bg-gray-800 hover:bg-blue-500 rounded-xl text-white">Submit</button>
+            <button class="py-2 px-5 text-lg bg-gray-700 hover:bg-blue-500 rounded-xl text-white">Submit</button>
         </div>
 
     </form>
