--- a/inventory/templates/inventory/items.html
+++ b/inventory/templates/inventory/items.html
@@ -6,32 +6,31 @@
 
 {% block content %}
 
-<div class="p-6 bg-gray-100">
+<div class="p-6 bg-gray-900">
 
-    <form action="{% url 'inventory:items' %}" method="get" class="mb-4 px-4">
+    <form action="{% url 'inventory:items' %}" method="get" class="mb-4 p-4 bg-gray-900">
 
-        <input name="query" class="w-full py-2 px-3 border rounded" type="text" value="{{ query }}" placeholder="Search lights, services, etc!">
+        <input name="query" class="w-full py-2 px-3 bg-gray-800 text-white" type="text" value="{{ query }}" placeholder="Search lights, services, etc!">
         <button class="mt-2 py-2 px-3 text-base bg-blue-600 text-white rounded">Search</button>
         <a href="{% url 'inventory:items' %}" class="mt-2 p-2 inline-block bg-yellow-500 text-base rounded text-white">Clear</a>
 
     </form>
 
-    <hr class="my-2 mx-4">
+    <hr class="my-2 bg-gray-800 mx-4">
 
 </div>
 
-<div class="bg-gray-100 px-4">
+<div class="bg-gray-900 px-4">
 
     <div class="grid grid-cols-1 gap-3">
         {% for item in items %}
-            <div class="bg-white rounded p-4 flex items-start">
+            <div class="bg-gray-800 rounded p-4 flex items-start">
                 <a href="{% url 'inventory:detail' item.id %}" class="flex-shrink-0">
                     <img src="{{ item.image.url }}" class="rounded-t h-20 w-20">
                 </a>
 
                 <div class="flex-grow pl-4">
-                    <h2 class="text-lg"><a href="{% url 'inventory:detail' item.id %}">{{ item.name }}</a></h2>
-                    <p class="text-gray-500">Price: {{ item.price }}</p>
+                    <h2 class="text-lg text-white"><a href="{% url 'inventory:detail' item.id %}">{{ item.name }}</a></h2>
                 </div>
             </div>
         {% endfor %}
