--- a/core/templates/core/password_reset_complete.html
+++ b/core/templates/core/password_reset_complete.html
@@ -3,13 +3,13 @@
 {% block title %}Password Reset Complete{% endblock %}
 
 {% block content %}
-<div class="w-full my-6 px-4 bg-white shadow-md rounded-xl p-6">
-    <h1 class="mb-4 text-xl md:text-2xl text-center">Password Reset Complete</h1>
+<div class="w-full my-6 px-4 bg-gray-800 shadow-md rounded-xl p-6">
+    <h1 class="mb-4 text-xl md:text-2xl text-white text-center">Password Reset Complete</h1>
 
-    <p>Your password has been set. You may go ahead and log in now.</p>
+    <p class="text-white">Your password has been set. You may go ahead and log in now.</p>
 
     <div class="flex justify-center p-2">
-        <a href="{% url 'login' %}" class="py-2 px-4 text-lg bg-gray-800 hover:bg-blue-500 rounded text-white">Log in</a>
+        <a href="{% url 'login' %}" class="py-2 px-4 text-lg bg-gray-700 hover:bg-blue-500 rounded text-white">Log in</a>
     </div>
 </div>
 {% endblock %}
