--- a/core/templates/core/password_reset_confirm.html
+++ b/core/templates/core/password_reset_confirm.html
@@ -3,7 +3,7 @@
 {% block title %}Enter New Password{% endblock %}
 
 {% block content %}
-<div class="w-full my-6 px-4 bg-white shadow-md rounded-xl p-6">
+<div class="w-full my-6 px-4 bg-gray-800 text-white shadow-md rounded-xl p-6">
     <h1 class="mb-4 text-xl md:text-2xl text-center">Enter New Password</h1>
 
     <form method="post" action=".">
@@ -31,7 +31,7 @@
         </div>
 
         <div class="flex justify-center">
-            <button class="py-2 px-4 text-lg bg-gray-800 hover:bg-blue-500 rounded text-white">
+            <button class="py-2 px-4 text-lg bg-gray-700 hover:bg-blue-500 rounded text-white">
                 Submit
             </button>
         </div>
