--- a/core/templates/core/password_reset_done.html
+++ b/core/templates/core/password_reset_done.html
@@ -3,11 +3,11 @@
 {% block title %}Password Reset{% endblock %}
 
 {% block content %}
-<div class="w-full my-6 px-4 bg-white shadow-md rounded-xl p-6">
-    <h1 class="mb-4 text-xl md:text-2xl text-center">Reset Your Password</h1>
+<div class="w-full my-6 px-4 bg-gray-800 shadow-md rounded-xl p-6">
+    <h1 class="mb-4 text-xl md:text-2xl text-white text-center">Reset Your Password</h1>
 
-    <p>We've emailed you instructions for setting your password. If an account exists with the email you entered, you should receive them shortly.</p>
+    <p class="text-white">We've emailed you instructions for setting your password. If an account exists with the email you entered, you should receive them shortly.</p>
 
-    <p>If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
+    <p class="text-white">If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</p>
 </div>
 {% endblock %}
