--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css" rel="stylesheet">
-  <title>{% block title %}{% endblock %} | Diskvr</title>
+  <title>{% block title %}{% endblock %} | neon_createslove</title>
   <style>
 
     /* Custom styles for mobile optimization */
@@ -23,7 +23,7 @@
 <body class="bg-gray-900">
 
   <nav class="py-6 px-6 flex justify-between text-white items-center border-b border-gray-800 bg-black">
-    <a href="/" class="text-xl font-semibold hover:text-blue-500">Diskvr</a>
+    <a href="/" class="text-xl font-semibold hover:text-blue-500">neon_createslove</a>
     <div class="space-x-6 md:hidden">
       <button id="mobileMenuButton" class="text-lg font-semibold">
         <span class="sr-only">Open menu</span>
@@ -65,6 +65,7 @@
       document.querySelector('.nav-links').classList.toggle('active');
     });
 
+    // WhatsApp redirect functionality
     document.addEventListener('DOMContentLoaded', function() {
     const contactButton = document.getElementById('contact-seller');
     const encodedPhoneNumber = contactButton.getAttribute('data-phone');
@@ -74,23 +75,37 @@
     contactButton.addEventListener('click', function() {
         if (phoneNumber) {
             const itemName = contactButton.getAttribute('data-item-name');
-            const itemDescription = contactButton.getAttribute('data-item-description');
-            const itemMeters = contactButton.getAttribute('data-item-meters');
-            const itemInches = contactButton.getAttribute('data-item-inches');
+            const itemID = contactButton.getAttribute('data-item-id');
+            const itemOrder = contactButton.getAttribute('data-item-order');
+            const itemUsername = contactButton.getAttribute('data-item-username');
+            const itemEmail = contactButton.getAttribute('data-item-email');
             
-            const currentPageUrl = window.location.href;
+            const domain = window.location.host;
+            const path = "/items/" + itemID;
+            const fullPath = domain + path;
             
             // const message = `Hi, I'm interested in the ${itemName}. Item Description: ${itemDescription} Meters: ${itemMeters} Inches: ${itemInches} Page URL: ${currentPageUrl}`;
-            const message = `Hi, I'm interested in ${itemName}.\n\n` +
-                                `Description: ${itemDescription}\n\n` +
-                                `Meters: ${itemMeters}\n\n` +
-                                `Inches: ${itemInches}\n\n` +
-                                `Page URL: ${currentPageUrl}`;
+            const message = `Hi, order placed for ${itemName}.\n\n` +
+                                `Order ID: ${itemOrder}\n\n` +
+                                `Username: ${itemUsername}\n\n` +
+                                `Email: ${itemEmail}\n\n` +
+                                `Page URL: ${fullPath}`;
 
             const whatsappLink = baseLink + phoneNumber + '&text=' + encodeURIComponent(message);
             window.open(whatsappLink, '_blank');
         }
     });
+    });
+
+    // Close order on check functionality
+    document.addEventListener('DOMContentLoaded', function() {
+      {% for order in orders.working_orders %}
+      document.getElementById('myCheckbox{{ order.order_id }}').addEventListener('change', function() {
+          if(this.checked) {
+              document.getElementById('myForm{{ order.order_id }}').submit();
+          }
+      });
+      {% endfor %}
     });
   </script>
 
