--- a/inventory/templates/inventory/closed_orders.html
+++ b/inventory/templates/inventory/closed_orders.html
@@ -1,17 +1,13 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Orders{% endblock %}
+{% block title %}Closed orders{% endblock %}
 
 {% block content %}
     {% if request.user.is_authenticated %}
 
-        <div class="text-center mb-4">
-            <a href="{% url 'inventory:closed_orders' %}" class="text-lg font-semibold px-6 py-3 bg-blue-400 text-white rounded-full inline-block">Closed orders</a>
-        </div>
-
         {% if request.user.is_superuser %}
 
-            {% for order in orders.working_orders %}
+            {% for order in orders %}
             <div class="flex flex-col md:flex-row bg-gray-800 text-white m-4 p-4 rounded-xl items-center">
                 <div class="flex-1 mb-4 md:mb-0 text-center">
                     <p class="text-blue-500">Order ID</p>
@@ -32,7 +28,7 @@
                     <form method="POST" id="myForm{{ order.order_id }}">
                         {% csrf_token %}
                         <input type="hidden" name="order_id" value="{{ order.order_id }}">
-                        <input type="checkbox" id="myCheckbox{{ order.order_id }}" name="myCheckbox" value="checked">
+                        <input type="checkbox" id="myCheckbox{{ order.order_id }}" name="myCheckbox" value="checked" checked>
                         <label for="myCheckbox{{ order.order_id }}">Close order</label><br>
                     </form>
                 </div>
@@ -41,7 +37,7 @@
 
         {% else %}
 
-            {% for order in orders.client_orders %}
+            {% for order in orders %}
             <div class="flex flex-col md:flex-row bg-gray-800 text-white m-4 p-4 rounded-xl items-center">
                 <div class="flex-1 mb-4 md:mb-0 text-center">
                     <p class="text-blue-500">Order ID</p>
@@ -53,7 +49,7 @@
                 </div>
                 <div class="flex-1 mb-4 md:mb-0 text-center">
                     <p class="text-blue-500">Status</p>
-                    <p>In progress</p>
+                    <p>Completed</p>
                 </div>
                 <div class="flex-1 text-center">
                     <img src="{{ MEDIA_URL }}{{ order.product_image_path }}" class="w-32 h-32 object-cover mx-auto">
