updated url for whatsapp redirect

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -82,7 +82,7 @@
             const itemEmail = contactButton.getAttribute('data-item-email');
             
             const domain = window.location.host;
-            const path = "/items/" + itemID;
+            const path = "/inventory/" + itemID;
             const fullPath = domain + path;
             
             // const message = `Hi, I'm interested in the ${itemName}. Item Description: ${itemDescription} Meters: ${itemMeters} Inches: ${itemInches} Page URL: ${currentPageUrl}`;
