--- a/inventory/templates/inventory/detail.html
+++ b/inventory/templates/inventory/detail.html
@@ -23,6 +23,7 @@
                 {% endif %}
 
                 <h2 class="text-xl text-blue-400 p-2">General</h2>
+                <p class="text-white px-2"><strong>Price(&#8377;): </strong>{{ item.price }}</p>
                 <p class="text-white px-2"><strong>LED lights used: </strong>{{ item.led_lights_used }}</p>
                 <p class="text-white px-2"><strong>Inches: </strong>{{ item.inches }}</p>
                 <p class="text-white px-2"><strong>Sheet mm: </strong>{{ item.sheet_mm }}</p>
